fix: sidebar collapsed width

--- a/assets/css/app.css
+++ b/assets/css/app.css
@@ -20,7 +20,7 @@ body.trifle-sidebar-open {
   }
 
   html[data-trifle-client-sidebar="collapsed"] [data-sidebar-shell="client"] {
-    width: 6rem;
+    width: 6.25rem;
   }
 
   html[data-trifle-client-sidebar="expanded"] [data-sidebar-content="client"] {
@@ -28,7 +28,7 @@ body.trifle-sidebar-open {
   }
 
   html[data-trifle-client-sidebar="collapsed"] [data-sidebar-content="client"] {
-    padding-left: 6rem;
+    padding-left: 6.25rem;
   }
 
   html[data-trifle-admin-sidebar="expanded"] [data-sidebar-shell="admin"] {
@@ -36,7 +36,7 @@ body.trifle-sidebar-open {
   }
 
   html[data-trifle-admin-sidebar="collapsed"] [data-sidebar-shell="admin"] {
-    width: 6rem;
+    width: 6.25rem;
   }
 
   html[data-trifle-admin-sidebar="expanded"] [data-sidebar-content="admin"] {
@@ -44,7 +44,13 @@ body.trifle-sidebar-open {
   }
 
   html[data-trifle-admin-sidebar="collapsed"] [data-sidebar-content="admin"] {
-    padding-left: 6rem;
+    padding-left: 6.25rem;
+  }
+
+  html[data-trifle-client-sidebar="collapsed"] [data-sidebar-shell="client"] .sidebar-nav-link:not(:focus-visible),
+  html[data-trifle-admin-sidebar="collapsed"] [data-sidebar-shell="admin"] .sidebar-nav-link:not(:focus-visible) {
+    background: transparent !important;
+    box-shadow: none !important;
   }
 }
 
